--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Minimalistic
-logo: /assets/img/logo.jpg
-email: person@address.com
+logo: /assets/img/rcb.jpeg
+email: reginaldchristianbernardo@gmail.com
 description: Minimalistic is a theme powered by Jekyll.
 favicon: true
 color-scheme: auto
@@ -13,17 +13,20 @@ plugins:
 platforms:
   - name: GitHub
     icon: <i class="fa-brands fa-github"></i>
-    link: https://github.com/vaibhavvikas
-  - name: LinkedIn
-    icon: <i class="fa-brands fa-linkedin"></i>
-    link: https://www.linkedin.com/in/vaibhavvikas
+    link: https://github.com/reggiebernardo
 
 navigation:
-  - name: Readme
+  - name: Home
     link: ./index.html
     sublist:
       - name: Image
         link: ./index.html#small-image
-  - name: Another Page
-    link: ./another-page.html
+  - name: Bio
+    link: ./about.html
+  - name: Research
+    link: ./research.html
+  - name: Teaching
+    link: ./teaching.html
+  - name: Contact
+    link: ./contact.html
     
