--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Reggie Bernardo
-logo: /assets/img/rcb.jpeg
+#logo: /assets/img/rcb.jpeg
 description: Your Friendly Neighborhood Cosmologist
 favicon: true
 color-scheme: auto
@@ -10,9 +10,6 @@ plugins:
   - jemoji
   
 platforms:
-  - name: Email
-    icon: <i class="fa fa-envelope" aria-hidden="true"></i>
-    link: mailto:reginaldchristianbernardo@gmail.com
   - name: GitHub
     icon: <i class="fa-brands fa-github"></i>
     link: https://github.com/reggiebernardo
