--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Reggie Bernardo
-#logo: /assets/img/rcb.jpeg
+logo: /assets/img/rcb.jpeg
 description: Your Friendly Neighborhood Cosmologist
 favicon: true
 color-scheme: auto
