--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Reggie Bernardo
 logo: /assets/img/rcb.jpeg
+email: Say Hi
 description: Your Friendly Neighborhood Cosmologist
 favicon: true
 color-scheme: auto
@@ -16,6 +17,9 @@ platforms:
   - name: ORCID
     icon: <i class="fa-brands fa-orcid"></i>
     link: https://orcid.org/0000-0001-8589-6851
+  - name: iNSPIRE-HEP
+    icon: <img src="https://inspirehep.net/favicon.ico" alt="InspireHEP Icon" width="16" height="16">
+    link: https://inspirehep.net/authors/1758391
 
 navigation:
   - name: Home
