twitter as readings

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Reggie Bernardo
 logo: /assets/img/rcb.jpeg
-email: Say Hi
+email: reginaldchristianbernardo@gmail.com
+twitter: reggiebernardo_
 description: Your Friendly Neighborhood Cosmologist
 favicon: true
 color-scheme: auto
