--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,8 @@ navigation:
         link: ./research.html#research-statement
       - name: Experience
         link: ./research.html#experience
+      - name: Outreach
+        link: ./research.html#outreach
       - name: My CV
         link: ./mycv.pdf
   - name: Teaching
